# Aggios_implementation

./: .gitignore  README.md
aggios/: Cargo.toml
aggios/crates/aggios-core/: Cargo.toml
aggios/crates/aggios-core/src/: artifacts.rs  benchmark.rs  bls.rs  demo.rs  domain.rs  election.rs  epa_adapter.rs  eqlog.rs  error.rs  hash.rs  labels.rs  lib.rs  registration.rs  tally.rs
aggios/crates/aggios-core/tests/: aggios_tests.rs
aggios/crates/aggios-server/: Cargo.toml
aggios/crates/aggios-server/src/: main.rs  routes.rs  state.rs
aggios/crates/aggios-server/static/: app.js  index.html
aggios/crates/aggios-wasm/: Cargo.toml
aggios/crates/aggios-wasm/src/: lib.rs
aggios/web/: build.sh
aggios_epa_benchmark/: Cargo.toml  README.md  VENDORED.md  log.txt  parse_logs.py
aggios_epa_benchmark/src/: fast_div.rs  kzg_helpers.rs  lib.rs  main.rs  prover.rs  structs.rs  utils.rs  verifier.rs
