[package]
name = "aggios"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false, features = [ "derive" ] }
ark-poly = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false, features = ["parallel"] }
ark-bls12-381 = { version = "^0.3.0", features = [ "std" ] }
ark-poly-commit = { version = "^0.3.0", default-features = false }  # activating parallel feature will make computation of Z_j 100x slower (no idea why)

rand = "0.8.5"

merlin = { version = "3.0.0" }
rayon = { version = "1.5.2" }
