[package]
name = "aggios-server"
version = "0.1.0"
edition = "2021"
description = "Basic Aggios demo backend API, /aggios UI host, and benchmark CLI"

[dependencies]
aggios-core = { path = "../aggios-core" }

axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8.5"
chrono = "0.4"
hex = "0.4"
