[package]
name = "aggios-wasm"
version = "0.1.0"
edition = "2021"
description = "In-browser build of the basic Aggios demo (wasm32-wasip1): the full crypto stack, including the black-box EPA prover/verifier, compiled to WebAssembly"

[lib]
crate-type = ["cdylib"]

[dependencies]
aggios-core = { path = "../aggios-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"
